commit before winter

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-yaml": "~3.0.1",
     "jade": "~1.0.2",
     "async": "~0.2.9",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "ssh2": "~0.2.16"
   }
 }
