enable service perfdata command

--- a/commands.cfg
+++ b/commands.cfg
@@ -101,3 +101,7 @@ define command{
        command_name    check_libvirt_kvm_host_volume_all
        command_line    $USER1$/check_libvirt.pl -H qemu+tcp://$HOSTADDRESS$/system -l VOLUME
 }
+define command{
+	command_name 	service_handler
+	command_line 	$USER1$/run_handler.sh $SERVICESTATE$ $SERVICESTATETYPE$ $SERVICEATTEMPT$ "$SERVICEPERFDATA$"
+}
