--- a/nagios.cfg
+++ b/nagios.cfg
@@ -356,6 +356,7 @@ log_passive_checks=1
 
 #global_host_event_handler=somecommand
 #global_service_event_handler=somecommand
+#global_service_event_handler=service_handler
 
 
 
@@ -832,7 +833,8 @@ enable_event_handlers=1
 # performance data.
 # Values: 1 = process performance data, 0 = do not process performance data
 
-process_performance_data=0
+#process_performance_data=0
+process_performance_data=1
 
 
 
@@ -846,6 +848,8 @@ process_performance_data=0
 
 #host_perfdata_command=process-host-perfdata
 #service_perfdata_command=process-service-perfdata
+host_perfdata_command=process-host-perfdata
+service_perfdata_command=process-service-perfdata
 
 
 
