add service for vm monitor

--- a/commands.cfg
+++ b/commands.cfg
@@ -64,22 +64,22 @@ define command{
 #check_libvirt.pl for guest vm
 define command{
        command_name    check_libvirt_kvm_guest_cpu
-       command_line    $USER1$/check_libvirt.pl -H qemu+tcp://$HOSTADDRESS$/system -N $ARG1$ -l CPU
+       command_line    $USER1$/check_libvirt.pl -H qemu+tcp://$HOSTNOTES$/system -N $HOSTALIAS$ -l CPU -c $_HOSTCPUCRITICAL$
 }
 
 define command{
        command_name    check_libvirt_kvm_guest_disk_io
-       command_line    $USER1$/check_libvirt.pl -H qemu+tcp://$HOSTADDRESS$/system -N $ARG1$ -l IO
+       command_line    $USER1$/check_libvirt.pl -H qemu+tcp://$HOSTNOTES$/system -N $HOSTALIAS$ -l IO -c $_HOSTDISKCRITICAL$
 }
 
 define command{
        command_name    check_libvirt_kvm_guest_mem
-       command_line    $USER1$/check_libvirt.pl -H qemu+tcp://$HOSTADDRESS$/system -N $ARG1$ -l MEM
+       command_line    $USER1$/check_libvirt.pl -H qemu+tcp://$HOSTNOTES$/system -N $HOSTALIAS$ -l MEM -c $_HOSTMEMCRITICAL$
 }
 
 define command{
        command_name    check_libvirt_kvm_guest_net_io
-       command_line    $USER1$/check_libvirt.pl -H qemu+tcp://$HOSTADDRESS$/system -N $ARG1$ -l NET
+       command_line    $USER1$/check_libvirt.pl -H qemu+tcp://$HOSTNOTES$/system -N $HOSTALIAS$ -l NET -c $_HOSTNETCRITICAL$
 }
 #check_libvirt.pl for host server
 define command{
