--- a/conf.d/hostgroups_nagios2.cfg
+++ b/conf.d/hostgroups_nagios2.cfg
@@ -31,3 +31,7 @@ define hostgroup {
 		alias           Compute Servers
 		members         compute01,compute02,compute03,compute04
         }
+define hostgroup {
+        hostgroup_name  vm_instances
+		alias           VM Instances
+        }
