暑期前提交

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "async": "~0.2.9",
     "underscore": "~1.5.2",
     "ssh2": "~0.2.16",
-    "log4js": "~0.6.12"
+    "log4js": "~0.6.12",
+    "eventproxy": "~0.3.1"
   }
 }
